# helpers/jwtHelper.js
@@ -1,7 +1,7 @@
 const jwt = require("jsonwebtoken");
 
 verifyToken = async (req, res, next) => {
-  const token = req.header("auth-token");
+  const token = req.header("accessToken");
   if (!token)
     return res
       .status(401)
@@ -18,7 +18,7 @@ verifyToken = async (req, res, next) => {
 };
 
 generateJwtToken = async data => {
-  return jwt.sign(data, process.env.SECRET, { expiresIn: "24h" });
+  return jwt.sign(data, process.env.SECRET, { expiresIn: 60 * 60 * 24 });
 };
 
 module.exports = {
